--- a/hosts.ini
+++ b/hosts.ini
@@ -1,8 +1,34 @@
 [bastion]
-130.193.38.52
+130.193.38.52 ansible_user=user ansible_ssh_private_key_file=~/.ssh/woland2
 
 [webservers]
-10.0.1.13
-10.0.2.32
+10.0.1.13 ansible_host=10.0.1.13
+10.0.2.32 ansible_host=10.0.2.32
+
+[prometheus]
+10.0.1.7 ansible_host=10.0.1.7
+
+[grafana]
+10.0.1.4 ansible_host=10.0.1.4
+
+[elastic]
+10.0.1.20 ansible_host=10.0.1.20
+
+[kibana]
+10.0.1.35 ansible_host=10.0.1.35
+
 [webservers:vars]
-ansible_ssh_common_args='-o ProxyCommand="ssh -p 22 -W %h:%p -q user@130.193.38.52"'
+ansible_user=user
+ansible_ssh_private_key_file=~/.ssh/woland2
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@130.193.38.52 -i ~/.ssh/woland2"'
+
+[docker_hosts:children]
+prometheus
+grafana
+elastic
+kibana
+
+[docker_hosts:vars]
+ansible_user=user
+ansible_ssh_private_key_file=~/.ssh/woland2
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@130.193.38.52 -i ~/.ssh/woland2"'
