--- a/ansible/playbooks/elasticsearch.yml
+++ b/ansible/playbooks/elasticsearch.yml
@@ -4,11 +4,9 @@
   become: yes
 
   tasks:
-    - name: Install Docker
-      apt:
-        name: ["docker.io", "docker-compose-plugin"]
-        state: present
-        update_cache: yes
+    - name: Include Docker setup
+      include_tasks: common_docker.yml
+      when: "'docker_hosts' in group_names"
 
     - name: Increase vm.max_map_count
       sysctl:
@@ -23,12 +21,10 @@
         image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
         env:
           discovery.type: "single-node"
-          bootstrap.memory_lock: "false"
           ES_JAVA_OPTS: "-Xms1g -Xmx1g"
         ulimits:
           - "memlock:-1:-1"
-        ports:
-          - "9200:9200"
+        ports: ["9200:9200"]
         volumes:
           - "esdata:/usr/share/elasticsearch/data"
         restart_policy: always
