--- a/ansible/playbooks/kibana.yml
+++ b/ansible/playbooks/kibana.yml
@@ -11,9 +11,9 @@
     - name: Run Kibana container
       docker_container:
         name: kibana
-        image: docker.elastic.co/kibana/kibana:7.17.13
+        image: elastic/kibana:7.17.13
         env:
           ELASTICSEARCH_HOSTS: "http://10.0.1.20:9200"
-        ports: ["5601:5601"]
+        ports:
+          - "5601:5601"
         restart_policy: always
-      when: "'elastic' in groups"
