--- a/ansible/playbooks/elasticsearch.yml
+++ b/ansible/playbooks/elasticsearch.yml
@@ -18,13 +18,14 @@
     - name: Run Elasticsearch container
       docker_container:
         name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
+        image: elastic/elasticsearch:7.17.13
         env:
           discovery.type: "single-node"
           ES_JAVA_OPTS: "-Xms1g -Xmx1g"
         ulimits:
           - "memlock:-1:-1"
-        ports: ["9200:9200"]
+        ports:
+          - "9200:9200"
         volumes:
           - "esdata:/usr/share/elasticsearch/data"
         restart_policy: always
