--- a/hosts.ini
+++ b/hosts.ini
@@ -1,26 +1,26 @@
 [bastion]
-130.193.38.52 ansible_user=user ansible_ssh_private_key_file=~/.ssh/woland2
+89.169.141.87 ansible_user=user ansible_ssh_private_key_file=~/.ssh/woland2
 
 [webservers]
-10.0.1.13 ansible_host=10.0.1.13
-10.0.2.32 ansible_host=10.0.2.32
+10.0.1.24 ansible_host=10.0.1.24
+10.0.2.7 ansible_host=10.0.2.7
 
 [prometheus]
-10.0.1.7 ansible_host=10.0.1.7
+10.0.1.28 ansible_host=10.0.1.28
 
 [grafana]
-10.0.1.4 ansible_host=10.0.1.4
+10.0.1.3 ansible_host=10.0.1.3
 
 [elastic]
-10.0.1.20 ansible_host=10.0.1.20
+10.0.1.32 ansible_host=10.0.1.32
 
 [kibana]
-10.0.1.35 ansible_host=10.0.1.35
+10.0.1.34 ansible_host=10.0.1.34
 
 [webservers:vars]
 ansible_user=user
 ansible_ssh_private_key_file=~/.ssh/woland2
-ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@130.193.38.52 -i ~/.ssh/woland2"'
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@89.169.141.87 -i ~/.ssh/woland2"'
 
 [docker_hosts:children]
 prometheus
@@ -31,4 +31,12 @@ kibana
 [docker_hosts:vars]
 ansible_user=user
 ansible_ssh_private_key_file=~/.ssh/woland2
-ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@130.193.38.52 -i ~/.ssh/woland2"'
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@89.169.141.87 -i ~/.ssh/woland2"'
+
+[monitoring:children]
+prometheus
+grafana
+
+[logging:children]
+elastic
+kibana
