--- a/ansible/playbooks/common_docker.yml
+++ b/ansible/playbooks/common_docker.yml
@@ -1,4 +1,5 @@
 ---
+# Файл с задачами для установки Docker (должен включаться через include_tasks)
 - name: Update apt cache
   apt:
     update_cache: yes
@@ -15,12 +16,12 @@
 
 - name: Add Docker GPG key
   apt_key:
-    url: "https://download.docker.com/linux/ubuntu/gpg"
+    url: https://download.docker.com/linux/ubuntu/gpg
     state: present
 
 - name: Add Docker repository
   apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
     state: present
     update_cache: yes
 
@@ -32,10 +33,10 @@
       - containerd.io
     state: present
 
-- name: Install Docker Compose standalone
+- name: Install Docker Compose
   get_url:
-    url: "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-linux-x86_64"
-    dest: "/usr/local/bin/docker-compose"
+    url: https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-linux-x86_64
+    dest: /usr/local/bin/docker-compose
     mode: "0755"
 
 - name: Add user to docker group
