--- a/hosts.ini
+++ b/hosts.ini
@@ -1,26 +1,29 @@
 [bastion]
-89.169.141.87 ansible_user=user ansible_ssh_private_key_file=~/.ssh/woland2
+158.160.123.179 ansible_user=user ansible_ssh_private_key_file=~/.ssh/woland2
 
 [webservers]
-10.0.1.24 ansible_host=10.0.1.24
-10.0.2.7 ansible_host=10.0.2.7
+10.0.1.13 ansible_host=10.0.1.13
+10.0.2.21 ansible_host=10.0.2.21
 
 [prometheus]
-10.0.1.28 ansible_host=10.0.1.28
+10.0.1.10 ansible_host=10.0.1.10
 
 [grafana]
-10.0.1.3 ansible_host=10.0.1.3
+10.0.1.18 ansible_host=10.0.1.18
 
 [elastic]
-10.0.1.32 ansible_host=10.0.1.32
+10.0.1.5 ansible_host=10.0.1.5
 
 [kibana]
-10.0.1.34 ansible_host=10.0.1.34
+10.0.1.11 ansible_host=10.0.1.11
+
+[loadbalancer]
+51.250.38.162 ansible_host=51.250.38.162
 
 [webservers:vars]
 ansible_user=user
 ansible_ssh_private_key_file=~/.ssh/woland2
-ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@89.169.141.87 -i ~/.ssh/woland2"'
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@158.160.123.179 -i ~/.ssh/woland2"'
 
 [docker_hosts:children]
 prometheus
@@ -31,7 +34,7 @@ kibana
 [docker_hosts:vars]
 ansible_user=user
 ansible_ssh_private_key_file=~/.ssh/woland2
-ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@89.169.141.87 -i ~/.ssh/woland2"'
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q user@158.160.123.179 -i ~/.ssh/woland2"'
 
 [monitoring:children]
 prometheus
@@ -40,3 +43,6 @@ grafana
 [logging:children]
 elastic
 kibana
+
+[all:vars]
+lb_public_ip=51.250.38.162
