--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
+inventory = inventory.ini
+remote_user = user
+private_key_file = ~/.ssh/Woland2
 host_key_checking = False
+deprecation_warnings = False
