--- a/ansible/playbooks/nginx.yml
+++ b/ansible/playbooks/nginx.yml
@@ -1,26 +1,75 @@
 ---
-# Файл с задачами для Nginx (должен включаться через include_tasks)
-- name: Install Nginx
-  apt:
-    name: nginx
-    state: present
+- name: Configure Nginx on web servers
+  hosts: webservers
+  become: yes
+  vars:
+    nginx_files_dir: "{{ playbook_dir }}/../files/nginx"
 
-- name: Configure Nginx status page
-  copy:
-    content: |
-      server {
-          listen 80;
-          location /nginx_status {
-              stub_status on;
-              access_log off;
-              allow 127.0.0.1;
-              deny all;
+  tasks:
+    - name: Install Nginx
+      apt:
+        name: nginx
+        state: present
+        update_cache: yes
+
+    - name: Create Nginx config directory
+      file:
+        path: /etc/nginx/conf.d
+        state: directory
+        mode: '0755'
+
+    - name: Deploy main Nginx config
+      copy:
+        src: "{{ nginx_files_dir }}/nginx.conf"
+        dest: "/etc/nginx/nginx.conf"
+        mode: '0644'
+
+    - name: Deploy site config
+      copy:
+        src: "{{ nginx_files_dir }}/site.conf"
+        dest: "/etc/nginx/conf.d/default.conf"
+        mode: '0644'
+
+    - name: Create website directory
+      file:
+        path: /var/www/html
+        state: directory
+        mode: '0755'
+
+    - name: Deploy static website content
+      synchronize:
+        src: "{{ nginx_files_dir }}/html/"
+        dest: "/var/www/html/"
+        archive: yes
+        delete: yes
+        recursive: yes
+
+    - name: Enable Nginx status page
+      blockinfile:
+        path: /etc/nginx/conf.d/status.conf
+        create: yes
+        block: |
+          server {
+              listen 127.0.0.1:80;
+              server_name localhost;
+              
+              location /nginx_status {
+                  stub_status on;
+                  access_log off;
+                  allow 127.0.0.1;
+                  deny all;
+              }
           }
-      }
-    dest: /etc/nginx/conf.d/status.conf
-    mode: '0644'
 
-- name: Restart Nginx
-  service:
-    name: nginx
-    state: restarted
+    - name: Validate Nginx configuration
+      command: nginx -t
+      register: nginx_test
+      changed_when: false
+      notify: Restart Nginx
+
+    - name: Restart Nginx
+      service:
+        name: nginx
+        state: restarted
+        enabled: yes
+      when: nginx_test.rc == 0
