--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # Crash log files
 crash.log
 crash.*.log
+token.ini
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
